opam-version: "2.0"
synopsis: "HTTP client for MirageOS"
maintainer: ["team@robur.coop"]
authors: [
  "Robur Team <team@robur.coop>"
]
license: "MIT"
homepage: "https://github.com/robur-coop/http-mirage-client"
bug-reports: "https://github.com/robur-coop/http-mirage-client/issues"
depends: [
  "dune" {>= "2.3"}
  "ocaml" {>= "4.11.0"}
  "paf" {>= "0.2.0"}
  "mirage-clock" {>= "4.0.0"}
  "mirage-time" {>= "3.0.0"}
  "tcpip" {>= "7.0.0"}
  "lwt" {>= "5.5.0"}
  "mimic-happy-eyeballs" {>= "0.0.9"}
  "httpaf"
  "alcotest-lwt" {with-test}
  "mirage-clock-unix" {with-test & >= "4.0.0"}
  "mirage-crypto-rng" {with-test}
  "mirage-time-unix" {with-test & >= "3.0.0"}
  "h2" {>= "0.10.0"}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test & os != "macos"} # macOS is disabled due to restrictions in sandbox-exec
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/robur-coop/http-mirage-client.git"
